<resources>
    <string name="app_name">15011027_BilgiKayitUygulamasi</string>
    <string name="giris_text">GİRİŞ</string>
    <string name="kullanici_adi_text">Kullanıcı Adı</string>
    <string name="sifre_text">Şifre</string>
    <string name="yanlis_sifre_text">Kullanıcı adı ya da şifre yanlış!</string>
    <string name="kullanici_adi_bos_text">Kullanıcı adı girmelisiniz!</string>
    <string name="sifre_bos_text">Şifre girmelisiniz!</string>
    <string name="eksik_bilgi_text">Eksik bilgi girdiniz!</string>
    <string name="tamam_text">TAMAM</string>
    <string name="yeni_kayit_text">YENİ KAYIT</string>
    <string name="ad_text">Ad:</string>
    <string name="soyad_text">Soyad:</string>
    <string name="tc_text">T.C. Kimlik No:</string>
    <string name="telefon_text">Telefon No:</string>
    <string name="email_text">E-mail:</string>
    <string name="temizle_text">TEMİZLE</string>
    <string name="kayit_text">KAYIT OL</string>
    <string name="ders_listesi_text">DERS LİSTESİ</string>
    <string name="dersler_text"><u>Dersler</u></string>
    <string name="notlar_text"><u>Notlar</u></string>
    <string name="ders_adi">Dersin Adı</string>
    <string name="ders_veren">Dersi Veren</string>
    <string name="ders_kredi">Dersin Kredisi</string>
    <string name="ders_notu">Öğrencinin Notu</string>
</resources>
