<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DersBilgileriActivity">

    <TextView
        android:id="@+id/dersAdiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ders_adi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dersAdiEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        tools:text="Mobil Programlamaya Giriş" />

    <TextView
        android:id="@+id/dersVerenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/ders_veren"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dersVerenEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        tools:text="M. Amaç GÜVENSAN" />

    <TextView
        android:id="@+id/krediText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/ders_kredi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/krediEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        tools:text="3" />

    <TextView
        android:id="@+id/notText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/ders_notu"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/notEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        tools:text="AA" />
</LinearLayout>