<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KayitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yeniKayitText"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center|start"
            android:text="@string/yeni_kayit_text"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="60sp" />

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/adText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/ad_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/adEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/adText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tcEditText" />

        <TextView
            android:id="@+id/soyadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/soyad_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/adText"
            app:layout_constraintTop_toBottomOf="@+id/adText" />

        <EditText
            android:id="@+id/soyadEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/soyadText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tcEditText" />

        <TextView
            android:id="@+id/tcText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tc_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/soyadText"
            app:layout_constraintTop_toBottomOf="@+id/soyadText" />

        <EditText
            android:id="@+id/tcEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/tcText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tcText" />

        <TextView
            android:id="@+id/telefonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/telefon_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tcText"
            app:layout_constraintTop_toBottomOf="@+id/tcText" />

        <EditText
            android:id="@+id/telefonEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@+id/telefonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tcEditText" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/telefonText"
            app:layout_constraintTop_toBottomOf="@+id/telefonText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/emailText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/telefonEditText" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/kayitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="32dp"
        android:text="@string/kayit_text" />

</LinearLayout>