<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KisiBilgileriActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/adSoyadText"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:gravity="center|start"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="60sp"
            tools:text="Arda Taha Candan"
            android:autoSizeTextType="uniform" />

        <ImageView
            android:id="@+id/kisiAvatarImage"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/kisiTcText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="40738970862" />

        <TextView
            android:id="@+id/kisiTelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="05363596473" />

        <TextView
            android:id="@+id/kisiMailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="candanardat@gmail.com" />

        <Button
            android:id="@+id/notlarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/ders_listesi_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/mailButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/kisiMailText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/kisiMailText"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <ImageButton
            android:id="@+id/telefonButton"
            style="@android:style/Widget.Holo.Light.ImageButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/kisiTelText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/kisiTelText"
            app:srcCompat="@android:drawable/stat_sys_phone_call" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/tc_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/telefon_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/kisiTcText"
            app:layout_constraintStart_toStartOf="@+id/kisiTcText"
            app:layout_constraintTop_toBottomOf="@+id/kisiTcText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/kisiTelText"
            app:layout_constraintStart_toStartOf="@+id/kisiTelText"
            app:layout_constraintTop_toBottomOf="@+id/kisiTelText" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>